--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,18 @@
             <groupId>uk.ac.gate</groupId>
             <artifactId>gate-core</artifactId>
             <version>8.1</version>
-        </dependency>
+          </dependency>
+          <dependency>
+              <groupId>org.apache.tika</groupId>
+                <artifactId>tika-core</artifactId>
+                  <version>1.12</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.tika</groupId>
+                      <artifactId>tika-parsers</artifactId>
+                        <version>1.12</version>
+                      </dependency>
+
     </dependencies>
 
 </project>
